# npg_notifications

./: CHANGELOG.md  Dockerfile.dev  README.md  docker-compose.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: run-tests.yml
docker/: entrypoint.sh
src/npg_notify/: __init__.py  config.py  mail.py
src/npg_notify/data/resources/: ont_event_email_template.txt
src/npg_notify/db/: mlwh.py  utils.py
src/npg_notify/ont/: event.py  porch.py
src/npg_notify/porch_wrapper/: qc_state.py
tests/: conftest.py  test_generate_and_send_email.py  test_retrieve_contacts.py
tests/data/: ont_email_body.txt  ont_email_body_non_multiplexed.txt  ont_event_app_config.ini  qc_state_app_config.ini
tests/data/mlwh_fixtures/: 100-Study.yml  200-StudyUser.yml
tests/ont/: conftest.py  test_event_cli.py  test_generate_email.py  test_porch.py
