[tool.poetry]
name = "npg_notify"
version = "0.0.1"
description = "Utility for client notifications"
authors = ["Marina Gourtovaia"]
license = "GPL-3.0-or-later"
readme = "README.md"

[tool.poetry.scripts]
npg_qc_state_notification = "npg_notify.porch_wrapper.qc_state:run" 

[tool.poetry.dependencies]
python = "^3.11"
SQLAlchemy = { version="^2.0.1", extras=["pymysql"] }
SQLAlchemy-Utils = "^0.41.2"
cryptography = "^41.0.3"
PyYAML = "^6.0.0"
npg_porch_cli = { git="https://github.com/wtsi-npg/npg_porch_cli.git", branch="devel" }

[tool.poetry.dev-dependencies]
pytest = "^8.2.2"
requests-mock = "^1.12.1"
ruff = "^0.4.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
# Set the maximum line length to 79.
line-length = 79

[tool.ruff.lint]
select = [
    # flake8
    "W",
]

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
pythonpath = [
  "src"
]
